--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,3 +33,6 @@ tokio = { version = "1.26.0", features = ["macros", "time", "process"] }
 toml_edit = { version = "0.19.12", features = ["serde"] }
 uuid = { version = "1.4.0", features = ["v4", "serde"] }
 wot-td = { git = "https://github.com/sifis-home/wot-td" }
+
+[dev-dependencies]
+tempdir = "0.3.7"
