--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.94"
 sifis-api = { git = "https://github.com/sifis-home/sifis-api.git", default-features = false, features = ["runtime"] }
 sifis-config = { git = "https://github.com/sifis-home/libp2p-rust-dht.git" }
-sifis-dht = { git = "https://github.com/sifis-home/libp2p-rust-dht.git" }
+sifis-dht = { git = "https://github.com/sifis-home/libp2p-rust-dht.git", branch = "dht-cache-reshape" }
 tarpc = { version = "0.33.0", features = ["tokio1", "serde-transport"] }
 tokio = { version = "1.26.0", features = ["macros", "time", "process"] }
 toml_edit = { version = "0.19.12", features = ["serde"] }
