wip: ci: build the custom image

--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -2,6 +2,9 @@ name: docker-aarch64
 
 on:
   push:
+    branches:
+      - master
+      - domo-wot-bridge-integration
     tags:
       - 'v*.*.*'
       - 'p*'
